--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Understanding DOM</title>
 	<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&display=swap" rel="stylesheet">
+	<!-- Include Font Awesome css file so the icons show up -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
